upgraded several dependencies (slf4j 2, log4j 2.19.0, commons-dbpc -> commons-dbcp2, javax.activation -> jakarta.activation, javax.mail -> jakarta.email, JUnit 5, swagger-parser 1.0.64, Saxon-HE 11.4 and others); use java-json-tools JSON schema validator; removed unused libraries (blueprint/osgi support)